--- a/telas/lista_cliente.html
+++ b/telas/lista_cliente.html
@@ -35,15 +35,7 @@
                     <th class="tabela__coluna--m tabela__alinhamento--direita"><a href="./cadastra_cliente.html" class="botao-simples botao-simples--adicionar">Novo Cliente</a></th>
                 </tr>
             </thead>
-            <tbody data-tabela>
-                <!-- <td class="td" data-td>${nome}</td>
-                <td>${email}</td>
-                <td>
-                    <ul class="tabela__botoes-controle">
-                        <li><a href="../telas/edita_cliente.html" class="botao-simples botao-simples--editar">Editar</a></li>
-                        <li><button class="botao-simples botao-simples--excluir" type="button">Excluir</button></li>
-                    </ul>
-                </td> -->
+            <tbody data-tabela>            
             </tbody>
         </table>
         <div class="modal-container modal--fechado">
@@ -59,9 +51,9 @@
                 </div>
             </article>
         </div>
-    </main>
+    </main>    
 </body> 
-
+<script src="../service/cliente-service.js"></script>
 
 </html>
 
