Crud assincrono com ajaX

--- a/telas/cadastra_cliente.html
+++ b/telas/cadastra_cliente.html
@@ -45,7 +45,8 @@
             </form>
         </section>
     </main>
-</body>
 
+    <script type="module" src="../controller/cadastra-clientes-controller.js" ></script>
+</body>
 
 </html>
