--- a/telas/lista_cliente.html
+++ b/telas/lista_cliente.html
@@ -53,7 +53,8 @@
         </div>
     </main>    
 </body> 
-<script src="../service/cliente-service.js"></script>
+<!-- Caso o codigo JavaScript por um modulo necessita informar no type  -->
+<script type="module" src="../controller/lista-clientes-controller.js"></script>
 
 </html>
 
